--- a/src/main/resources/view/login&register/LoginView.fxml
+++ b/src/main/resources/view/login&register/LoginView.fxml
@@ -16,15 +16,15 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="711.0" prefWidth="900.0" styleClass="leftside" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.UserController">
+<AnchorPane prefHeight="711.0" prefWidth="900.0" styleClass="leftside" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.UserController">
     <children>
-        <BorderPane prefHeight="600.0" prefWidth="800.0" styleClass="leftside" stylesheets="@style.css">
+        <BorderPane prefHeight="600.0" prefWidth="800.0" styleClass="leftside" stylesheets="@../css/style.css">
             <right>
                 <AnchorPane prefHeight="651.0" prefWidth="432.0" BorderPane.alignment="CENTER">
                     <children>
                         <ImageView fitHeight="735.0" fitWidth="672.0" layoutX="-176.0" layoutY="-49.0" opacity="0.3" preserveRatio="true">
                             <image>
-                                <Image url="@images/Pasted-20250315-215425_pixian_ai.png" />
+                                <Image url="@../images/Pasted-20250315-215425_pixian_ai.png" />
                             </image>
                         </ImageView>
                     </children>
@@ -40,7 +40,7 @@
                         </Text>
 
                               <!-- Khung đăng nhập -->
-                        <VBox fx:id="loginBox" alignment="CENTER" layoutX="118.0" layoutY="120.0" prefHeight="358.0" prefWidth="283.0" spacing="10" styleClass="root" stylesheets="@style.css">
+                        <VBox fx:id="loginBox" alignment="CENTER" layoutX="118.0" layoutY="120.0" prefHeight="358.0" prefWidth="283.0" spacing="10" styleClass="root" stylesheets="@../css/style.css">
                             <padding>
                                 <Insets bottom="20" left="20" right="20" top="20" />
                             </padding>
@@ -62,7 +62,7 @@
                         </VBox>
 
                               <!-- Khung đăng ký -->
-                        <VBox fx:id="registerBox" alignment="CENTER" layoutX="41.0" layoutY="120.0" prefHeight="425.0" prefWidth="404.0" spacing="10" styleClass="root" stylesheets="@style.css" visible="false">
+                        <VBox fx:id="registerBox" alignment="CENTER" layoutX="41.0" layoutY="120.0" prefHeight="425.0" prefWidth="404.0" spacing="10" styleClass="root" stylesheets="@../css/style.css" visible="false">
                             <padding>
                                 <Insets bottom="20" left="20" right="20" top="20" />
                             </padding>
@@ -121,7 +121,7 @@
                         <Label fx:id="registerStatusLabel" style="-fx-text-fill: red;" text="" />
                             </children>
                         </VBox>
-                  <VBox fx:id="confirmBox" alignment="CENTER" layoutX="46.0" layoutY="120.0" prefHeight="425.0" prefWidth="395.0" spacing="10" styleClass="root" stylesheets="@style.css" visible="false">
+                  <VBox fx:id="confirmBox" alignment="CENTER" layoutX="46.0" layoutY="120.0" prefHeight="425.0" prefWidth="395.0" spacing="10" styleClass="root" stylesheets="@../css/style.css" visible="false">
                      <padding>
                         <Insets bottom="20" left="20" right="20" top="20" />
                      </padding>
@@ -183,7 +183,7 @@
                         </HBox>
                      </children>
                   </VBox>
-                  <VBox fx:id="forgotPasswordBox" alignment="CENTER" layoutX="41.0" layoutY="120.0" prefHeight="425.0" prefWidth="404.0" spacing="10" styleClass="root" stylesheets="@style.css" visible="false">
+                  <VBox fx:id="forgotPasswordBox" alignment="CENTER" layoutX="41.0" layoutY="120.0" prefHeight="425.0" prefWidth="404.0" spacing="10" styleClass="root" stylesheets="@../css/style.css" visible="false">
                      <padding>
                         <Insets bottom="20" left="20" right="20" top="20" />
                      </padding>
