--- a/src/main/resources/view/login&register/login.fxml
+++ b/src/main/resources/view/login&register/login.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Text?>
 
 <?import javafx.scene.layout.Pane?>
-<VBox fx:id="loginBox" alignment="CENTER" prefHeight="358.0" prefWidth="283.0" spacing="10" styleClass="root" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
+<VBox fx:id="loginBox" alignment="CENTER" prefHeight="358.0" prefWidth="283.0" spacing="10" styleClass="root" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
     <padding>
         <Insets bottom="20" left="20" right="20" top="20" />
     </padding>
