--- a/src/main/resources/view/login&register/main.fxml
+++ b/src/main/resources/view/login&register/main.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="711.0" prefWidth="900.0" styleClass="leftside" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.UserController">
+<AnchorPane prefHeight="711.0" prefWidth="900.0" styleClass="leftside" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.UserController">
     <children>
-        <BorderPane prefHeight="600.0" prefWidth="800.0" styleClass="leftside" stylesheets="@../style.css">
+        <BorderPane prefHeight="600.0" prefWidth="800.0" styleClass="leftside" stylesheets="@../css/style.css">
             <right>
                 <AnchorPane prefHeight="651.0" prefWidth="432.0" BorderPane.alignment="CENTER">
                     <children>
