--- a/src/main/resources/view/fee/fee-management.fxml
+++ b/src/main/resources/view/fee/fee-management.fxml
@@ -11,7 +11,7 @@
 <VBox alignment="CENTER" spacing="10" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.FeeViewController">
     <!-- Hàng 1: Nút Thêm Mới -->
     <HBox alignment="CENTER_LEFT" spacing="10" stylesheets="@../css/table_fee.css">
-        <Button fx:id="addButton" onAction="#handleAdd" styleClass="new_button" stylesheets="@../css/table_fee.css" text="Thêm mới" textFill="WHITE" />
+        <Button fx:id="addButton" onAction="#handleAdd" styleClass="new_button" stylesheets="@../css/table_fee.css" text="Thêm mới" />
     </HBox>
 
     <!-- Hàng 2: Form lọc dữ liệu -->
@@ -37,64 +37,16 @@
             <TableColumn fx:id="amountColumn" text="Số tiền" />
             <TableColumn fx:id="unitColumn" text="Đơn vị tính" />
             <TableColumn fx:id="billPeriodColumn" text="Kỳ thanh toán" />
-            <TableColumn fx:id="descriptionColumn" text="Mô tả" />
+            <!--            <TableColumn fx:id="descriptionColumn" text="Mô tả" />-->
             <TableColumn fx:id="startDateColumn" text="Ngày bắt đầu" />
             <TableColumn fx:id="endDateColumn" text="Ngày kết thúc" />
-            <TableColumn fx:id="actionColumn" text="Thao tác" /> <!-- Sửa tiêu đề để phù hợp -->
+            <TableColumn fx:id="viewDetailColumn" text="Chi tiết" />
+            <TableColumn fx:id="actionColumn" text="Thao tác" />
+            <!-- Sửa tiêu đề để phù hợp -->
         </columns>
     </TableView>
 
-    <!--     Form nhập liệu-->
-    <!--    <GridPane hgap="10" vgap="10">-->
-    <!--        <children>-->
-    <!--&lt;!&ndash;            <Label text="Loại khoản thu :" GridPane.columnIndex="0" GridPane.rowIndex="0" />&ndash;&gt;-->
-    <!--&lt;!&ndash;            <ComboBox fx:id="categoryComboBox" editable="true" GridPane.columnIndex="1" GridPane.rowIndex="0" />&ndash;&gt;-->
-
-    <!--&lt;!&ndash;            <Label text="Nhóm khoản thu:" GridPane.columnIndex="0" GridPane.rowIndex="1" />&ndash;&gt;-->
-    <!--&lt;!&ndash;            <ComboBox fx:id="subCategoryComboBox" GridPane.columnIndex="1" GridPane.rowIndex="1" />&ndash;&gt;-->
-
-    <!--            <Label text="Số tiền:" GridPane.columnIndex="0" GridPane.rowIndex="2" />-->
-    <!--            <TextField fx:id="amountField" GridPane.columnIndex="1" GridPane.rowIndex="2" />-->
-
-    <!--            <Label text="Đơn vị tính:" GridPane.columnIndex="0" GridPane.rowIndex="3" />-->
-    <!--            <ComboBox fx:id="unitComboBox" GridPane.columnIndex="1" GridPane.rowIndex="3" />-->
-
-    <!--            <Label text="Kỳ thanh toán:" GridPane.columnIndex="0" GridPane.rowIndex="4" />-->
-    <!--            <ComboBox fx:id="billPeriodComboBox" GridPane.columnIndex="1" GridPane.rowIndex="4" />-->
-
-    <!--            <Label text="Mô tả:" GridPane.columnIndex="0" GridPane.rowIndex="5" />-->
-    <!--            <TextArea fx:id="descriptionArea" GridPane.columnIndex="1" GridPane.rowIndex="5" />-->
-
-    <!--            <Label text="Ngày bắt đầu:" GridPane.columnIndex="0" GridPane.rowIndex="6" />-->
-    <!--            <DatePicker fx:id="startDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="6" />-->
-
-    <!--            <Label text="Ngày kết thúc:" GridPane.columnIndex="0" GridPane.rowIndex="7" />-->
-    <!--            <DatePicker fx:id="endDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="7" />-->
-    <!--        </children>-->
-    <!--      <columnConstraints>-->
-    <!--         <ColumnConstraints />-->
-    <!--         <ColumnConstraints />-->
-    <!--      </columnConstraints>-->
-    <!--      <rowConstraints>-->
-    <!--         <RowConstraints />-->
-    <!--         <RowConstraints />-->
-    <!--         <RowConstraints />-->
-    <!--         <RowConstraints />-->
-    <!--         <RowConstraints />-->
-    <!--         <RowConstraints />-->
-    <!--         <RowConstraints />-->
-    <!--         <RowConstraints />-->
-    <!--      </rowConstraints>-->
-    <!--    </GridPane>-->
-
-
-    <!-- Các nút điều khiển -->
-    <!--    <HBox alignment="CENTER" spacing="10">-->
-    <!--        <Button fx:id="addButton" onAction="#handleAdd" text="Thêm" />-->
-    <!--        <Button fx:id="updateButton" onAction="#handleEdit" text="Sửa" />-->
-    <!--        <Button fx:id="deleteButton" onAction="#handleDelete" text="Xóa" />-->
-    <!--    </HBox>-->
 
     <!-- Label hiển thị trạng thái -->
-    <Label fx:id="statusLabel" text="Trạng thái" />
+    <Label fx:id="statusLabel" />
 </VBox>
